@@ -1,3 +1,9 @@
+2009-07-03  Oliver Munz  <munz@speag.ch>
+
+	* src/at91_flash.c: Enable use of the second flash in 512k devices.
+	Resolve potential problem with late PIT-initalisation. Prevent changes
+	to system clock when booting from a boot monitor.
+
 2008-11-17  Jonathan Larmour  <jifl@eCosCentric.com>
 
 	* src/at91_flash.c: Explicitly include <cyg/io/flash_dev.h> rather
@@ -38,7 +44,7 @@
 // ####GPLCOPYRIGHTBEGIN####                                                
 // -------------------------------------------                              
 // This file is part of eCos, the Embedded Configurable Operating System.   
-// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2006 Free Software Foundation, Inc.
+// Copyright (C) 1998, 1999, 2000, 2001, 2002, 2006, 2008, 2009 Free Software Foundation, Inc.
 //
 // This program is free software; you can redistribute it and/or modify     
 // it under the terms of the GNU General Public License as published by     
